fabric/testdata/out/ing_brownie-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"fe8288b6-d1fc-11e8-90e2-0618dc6898fa","deployment-id":"d-25iwoeb4s9dydgtj9xoiwy97je","pipeline-id":"l-s9vh4tc13wsng4p9j2ic9imwz"},"name":"brownie-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"brownie.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"brownie","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-logistics-data-test.zala [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2019-06-17T13:42:58Z"
  generation: 1
  labels:
    controller-uid: fe8288b6-d1fc-11e8-90e2-0618dc6898fa
    deployment-id: d-25iwoeb4s9dydgtj9xoiwy97je
    pipeline-id: l-s9vh4tc13wsng4p9j2ic9imwz
  name: brownie-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brownie
    uid: fe8288b6-d1fc-11e8-90e2-0618dc6898fa
  resourceVersion: "1370356646"
  uid: d14d11d1-9105-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: brownie.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brownie
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-logistics-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: brownie
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
